fixtures/frontend/milestone-2/invalid/duplicate-source-provider-contract/main.aivi
provider custom.feed
    wakeup: providerTrigger

provider custom.feed
    wakeup: timer
